# lb3d

./: .gitignore  configLB3D.sh  defines.CARTESIUS  defines.CCS  defines.GROUCH  defines.GROUCH-OPENMPI  defines.HERMIT  defines.JOULE  defines.JOULE2  defines.JUQUEEN  defines.JUROPA  defines.LIMA  defines.LINUX64TUE  defines.LISA  defines.RPI  defines.SUN  defines.SUN-INTEL  get-version.sh  md-compile.sh  template.defines
drag_tests/nonsph/prolate_2/: Re1000_coeffs.txt  Re2000_coeffs.txt  batchrun.cmd  ftcoeffs.py  init.cfg
drag_tests/nonsph/prolate_2.5/: Re0.1ang_coeffs  Re1000ang_coeffs  Re100ang_coeffs  Re10ang_coeffs  Re1ang_coeffs  Re2000ang_coeffs  Re2000cd_prolate.m  Re300ang_coeffs  angle.sh  batchrun.cmd  input-default  old_Re300ang_coeffs  stddev.m~  stddev_Re1000.m  stddev_Re2000.m  stddev_Re300.m
drag_tests/nonsph/prolate_4/: .fd.py.swp  Re1000_coeffs.txt  Re1000_coeffs_backup.txt  Re1000cd_prolate.m  Re2000_coeffs.txt  Re300ang_sd  Re300cd_prolate.m  batchrun.cmd  cdvariance.m  chk_uid-info  coeffs.m  drag.fig  fd.py  ftcoeffs.py  myjob.cmd
drag_tests/nonsph/prolate_8/: Re1000_coeffs.txt  Re2000_coeffs.txt  backup_myjob.cmd  batchrun.cmd  ftcoeffs.py
drag_tests/nonsph/sphere/: Re1000_coeffs.txt  Re2000_coeffs.txt  batchrun.cmd  ftcoeffs.py
drag_tests/nonsph/spherocylinder_4/: Re1000ang_coeffs  Re1000cd_sph.m  Re2000ang_coeffs  Re300ang_coeffs  Re300cd_sph.m  coeffs.m
jobscripts/: cartesius-bullx.slurm  cartesius.slurm  grouch-mvapich.sge  grouch-openmpi.sge  grouch.sge  grouch.slurm  hermit.pbs  hornet.pbs  juqueen.ll  juropa.pbs  lima.sge
lb3d-utils/: configLB3D-utils.sh  defines.CARTESIUS  defines.CARTESIUS-BULLX  defines.DEBIAN  defines.GNU  defines.GROUCH  defines.HECToR  defines.JUQUEEN  defines.LEGION  get-version.sh
lb3d-utils/src/XMTutils/: README  xmt2ascii.c  xmt2ascii_mirror.c
lb3d-utils/src/borders/: isosurf  makebox  makepipe  makerandom  makestone  maketube  makewall  mkzwall  pipe.all  pipe.all.fld
lb3d-utils/src/cpost/: Makefile.STUB  fieldio.c  fieldio.h  namelist.c  namelist.h  post.c  readbin.h
lb3d-utils/src/demos/: README  input-file.ahm02  input-file.sc02  steer-cmd.sc02
lb3d-utils/src/dropletTools/: Makefile.STUB  checkpointCopyFlip.py  coalescence-shape.py  getCapillaryCA.c  getCapillaryCAnew.c  getCapillaryLaplaceSigma.c  getCapillarySigma.c  getCapillarySigmaY.c  getCapillaryTheoZ.c  getContactAngle.c  getContactAngle.h  getDropletBaseRadius.c  getGeometricalCA.c  getHuangCA.c  getInitDens.c  getIsoColourZ.c  getMechSigmaCA.c  getMechSigmaRadialCA.c  getMinMax.c  getZeroColourZ.c  hdfCut.c  hdfCutGleSurf.c  hdfFunctions.c  hdfTest.c  hdfread.c  hdfread.h
lb3d-utils/src/ellipsoidPickeringTools/: 2pcorr-3d.cpp  Makefile.STUB  contactAngle.cc  contactAngle_xdir.cc  converttocolasc.sh  ma2tadsorbKugelOPSQmcol.cc  ma2tadsorbKugelOPSQmcolscript  ma2tadsorbPEOPSQcol.cc  ma2tadsorbgrug2th.cc
lb3d-utils/src/ftools/: Makefile.STUB  avg1d.pl  avg_scalar_hdf.F90  bin2all.F90  cut1d.F90  cut1d_avg_pxz.sh  cut1d_avg_vel.sh  cut1d_hdf.F90  dbl2sgl.F90  massflow_hdf.F90  pressuregrad_hdf.F90  rockall2xdr.F90  rotxdr.F90
lb3d-utils/src/h5converter/: Makefile.STUB  README  datatypes.h  h5clustersplit.cpp  h5converter.cpp  h5converter.h
lb3d-utils/src/local_tau/: Makefile.STUB  localtau.F90  xdrchannel.F90
lb3d-utils/src/misc/: dims.c  hpcx-calc.c
lb3d-utils/src/moreDropletTools/: Doxyfile  Makefile.GROUCH  Makefile.JUGENE  Makefile.JUROPA  Makefile.STUB  arr-to-velz.cpp  (+28 more)
lb3d-utils/src/vistools/glballs/: Makefile  Makefile.config  Makefile.config.in  Makefile.in  README  aclocal.m4  config.h.in  config.status  configure  configure.in  stamp-h.in
lb3d-utils/src/vistools/glballs/CONFIG/: axis  eland  margay  pudu.ica1.uni-stuttgart.de  sym  zebu1.ica1.uni-stuttgart.de
lb3d-utils/src/vistools/glballs/D/: D_CData.h  D_CDisplay.cc  D_CDisplay.h  D_CGL.cc  D_CGL.h  D_CGLBox.cc  D_CGLBox.h  D_CGLBox_include.h  D_CGL_Blip.cc  D_CGL_Borders.cc  D_CGL_Circle.cc  D_CGL_ColorModes_include.h  D_CGL_Cube.cc  D_CGL_Sphere.cc  D_CGL_Texture.cc  D_CLoader.cc  D_CLoader.h  GL_CQuad.h  GL_CQuadIO.h  MD.h  Makefile  Makefile.in  fakeqt.h
lb3d-utils/src/vistools/glballs/T/: Makefile  Makefile.in  T.h  T_CArg.cc  T_CArg.h  T_CContainer.cc  T_CContainer.h  T_CContainer_inline.h  T_CVector.cc  T_CVector.h  T_CVector_inline.h  T_Debug.h  T_Macros.h  T_MacrosMemLeak.h  T_Types.h  T_cmath.h  T_math.h
lb3d-utils/src/vistools/glballs/autom4te.cache/: output.0  requests  traces.0
lb3d-utils/src/vistools/glballs/misc/: plane.pl
lb3d-utils/src/vistools/glballs/src/: Makefile  Makefile.in  QuadPlane.cc  QuadSurface  QuadSurface.cc  acinclude.m4  generator  generator.cc  glballs  glballs.cc
lb3d-utils/src/vistools/vol3d/: .mt-attrs  2dsf.c  LookUpTable.h  Makefile.in  QUICKSTART  adjFloatList.c  adjFloatList.h  adjFloatListTest.c  binnery.c  binnery.h  config.h.in  configure  configure.in  dirscan.c  dirscan.h  dla-plane.c  dla.c  genus.c  glMulticast.c  glutViewer.c  glutViewer.h  glutViewerTest.c  glutiso.c  glutvol.c  growarr.c  growarr.h  growarr_test.c  idla.c  isomain.c  isosurface.c  isosurface.h  lut.h  lutWidget.c  lutWidget.h  lutold.c  main.c  mcubes.c  mcubes.h  mcubes_tables.c  mcubes_tables.h  (+32 more)
lb3d-utils/src/vistools/vol3d/MT/: options  revision
lib/xdrf/: Makefile  Makefile.STUB  ctest  libxdrf.c
src/: --color  Makefile  Makefile.template  fft_3d.c  hoshen_kopelman.F90  input-default  input-default.md  input-file  input-file.elec  input-file.md  lbe.F90  lbe.h  lbe_MRT.F90  lbe_analysis.F90  lbe_axisym.F90  lbe_bc.F90  lbe_bdist.F90  lbe_collision.F90  lbe_collision_simple.F90  lbe_elec_fluxes.F90  lbe_elec_forces.F90  lbe_elec_globals.F90  lbe_elec_helper.F90  lbe_elec_init.F90  lbe_elec_input.F90  lbe_elec_interface.F90  lbe_elec_output.F90  lbe_elec_parallel.F90  lbe_elec_poisson_solver.F90  lbe_elec_timer.F90  lbe_elec_timestep.F90  lbe_force.F90  lbe_force_constant.F90  lbe_force_interface.F90  lbe_force_kolmogorov.F90  lbe_galilean_stabilizer.F90  lbe_globals.F90  lbe_helper.F90  lbe_init.F90  lbe_init_rock.F90  (+91 more)
(+720 files in other folders)
